Bring SGPreports up to version 1.3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(renderDOCX)
 export(use.data.table)
 export(dualTable)
 export(coverTitle)
+export(getVignette)
 export(tblNum)
 export(tblNumNext)
 export(tblNumIncrement)
